update composer dependencies to include laravel/sanctum and spatie/laravel-enum

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,13 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-enum": "^3.2",
         "spatie/laravel-event-sourcing": "^7.11"
     },
     "require-dev": {
+        "albertoarena/laravel-event-sourcing-generator": "^1.0",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
